--- a/roles/docker/templates/dmz-apps-compose.yml
+++ b/roles/docker/templates/dmz-apps-compose.yml
@@ -141,6 +141,29 @@ services:
       traefik.http.middlewares.traefik-forward-auth.forwardauth.authResponseHeaders: X-Forwarded-User
       traefik.http.middlewares.traefik-forward-auth.forwardauth.trustForwardHeader: true
 
+  nginx:
+    container_name: nginx
+    image: nginx:latest
+    restart: unless-stopped
+
+    depends_on:
+      - traefik
+      - forward_auth
+
+    volumes:
+      - /ssd/dmz/app/nginx:/usr/share/nginx/html:ro
+
+    networks:
+      - web
+    
+    labels:
+      traefik.enable: true
+      traefik.http.routers.h4.rule: Host(`h4.{{ domain }}`)
+      traefik.http.routers.h4.entrypoints: https
+      traefik.http.routers.h4.tls.certresolver: default
+      # Require keycloak sign-in to access any pages
+      traefik.http.routers.h4.middlewares: traefik-forward-auth
+
   # Google Docs for markdown documents
   hedgedoc:
     image: lscr.io/linuxserver/hedgedoc:latest
@@ -149,6 +172,7 @@ services:
 
     depends_on:
       - traefik
+      - forward_auth
 
     environment:
       PUID: 2010
@@ -188,6 +212,7 @@ services:
       traefik.http.services.hd.loadbalancer.server.port: 3000
       # Require keycloak sign-in to access any pages
       traefik.http.routers.hd.middlewares: traefik-forward-auth
+
 
   mariadb:
     container_name: mariadb
