--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,9 @@ roles:
   - name: geerlingguy.docker
   - name: robertdebock.bootstrap
   - name: robertdebock.rsyslog
+  - name: geerlingguy.ntp
+  - name: lae.proxmox
+  - name: simoncaron.pve_addons
 
 collections:
   - name: kewlfft.aur
