--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -62,11 +62,4 @@
     owner: root
     group: root
     validate: sshd -t -f %s
-  register: sshd
-
-- name: Reload sshd config
-  tags: sshd
-  service:
-    name: sshd
-    state: restarted
-  when: sshd.changed
+  notify: Reload sshd config
