--- a/roles/remote_logs/tasks/main.yml
+++ b/roles/remote_logs/tasks/main.yml
@@ -6,7 +6,6 @@
     path: /etc/rsyslog.conf
     regexp: "@@10\\.0\\."
     line: authpriv.* @@10.0.0.5:514;RSYSLOG_SyslogProtocol23Format
-  register: rsyslog
 
 - name: Enable Docker GELF logs
   tags: config, logging, docker
@@ -17,11 +16,4 @@
     owner: root
     group: root
     mode: 0600
-  register: docker_daemon
-
-- name: Restart Docker daemon
-  tags: config, logging, docker
-  when: docker_daemon.changed
-  service:
-    name: docker.socket
-    state: restarted
+  notify: Restart Docker daemon
