--- a/roles/pve_networking/handlers/main.yml
+++ b/roles/pve_networking/handlers/main.yml
@@ -1,12 +1,6 @@
 ---
-# - name: Reload network interfaces
-#   block:
 - name: Reload network interfaces
-  shell: ifdown -a ; ifup -a
+  command: ifreload -a
   async: 20
-  poll: 5
+  poll: 2
   changed_when: true
-
-    # - name: Wait for server to come back online
-    #   wait_for_connection:
-    #     delay: 5
