--- a/roles/remote_logs/tasks/main.yml
+++ b/roles/remote_logs/tasks/main.yml
@@ -15,5 +15,5 @@
     dest: /etc/docker/daemon.json
     owner: root
     group: root
-    mode: 0600
+    mode: "0600"
   notify: Restart Docker daemon
