--- a/roles/arch_desktop/tasks/main.yml
+++ b/roles/arch_desktop/tasks/main.yml
@@ -15,6 +15,6 @@
   blockinfile:
     path: /home/{{ user }}/.Xresources
     create: true
-    mode: 0660
+    mode: "0660"
     block: |-
       Xcursor.size: 16
