--- a/roles/docker/templates/lyra-compose.yml
+++ b/roles/docker/templates/lyra-compose.yml
@@ -44,8 +44,8 @@ services:
       GRAYLOG_HTTP_EXTERNAL_URI: "http://lyra:9000/"
       GRAYLOG_ELASTICSEARCH_HOSTS: "http://elasticsearch:9200"
       GRAYLOG_MONGODB_URI: "mongodb://mongodb:27017/graylog"
-      GRAYLOG_TIMEZONE: "America/Chicago"
-      GRAYLOG_ROOT_TIMEZONE: "America/Chicago"
+      GRAYLOG_TIMEZONE: {{ timezone }}
+      GRAYLOG_ROOT_TIMEZONE: {{ timezone }}
     ports:
     - "514:5140/udp"   # Syslog
     - "514:5140/tcp"   # Syslog
