--- a/roles/nfs_server/tasks/main.yml
+++ b/roles/nfs_server/tasks/main.yml
@@ -9,5 +9,5 @@
   copy:
     src: ansible.exports
     dest: /etc/exports.d/ansible.exports
-    mode: 0600
+    mode: "0600"
   notify: Restart nfs-server
