--- a/roles/arch_workstation/tasks/main.yml
+++ b/roles/arch_workstation/tasks/main.yml
@@ -27,6 +27,16 @@
       # - xf86-video-qxl
       # - spice-vdagent
 
+- name: Enable and start lightdm
+  tags: pkg
+  service:
+    name: lightdm
+    enabled: true
+    state: started
+
+- name: Install packages
+  include_tasks: packages.yaml
+
 - name: Enable and start services
   tags: pkg
   service:
@@ -40,6 +50,7 @@
     - avahi-daemon
     - pcscd
     - bluetooth
+    - incrond
 
 - name: Enable services
   tags: pkg
@@ -50,9 +61,6 @@
     - reflector
     - nvidia-suspend
     - nvidia-hibernate
-
-- name: Install packages
-  include_tasks: packages.yaml
 
 - name: Configure lightdm-gtk-greeter
   tags: pkg, config
@@ -167,6 +175,29 @@
       [Policy]
       AutoEnable=true
 
+- name: Create gtk theme dir
+  tags: config, theme
+  file:
+    path: /home/{{ user }}/.config/gtk-3.0
+    state: directory
+    mode: "0755"
+    owner: "{{ user }}"
+    group: "{{ user }}"
+
+- name: Configure gtk theme
+  tags: config, theme
+  blockinfile:
+    path: /home/{{ user }}/.config/gtk-3.0/settings.ini
+    create: true
+    mode: "0644"
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    block: |-
+      [Settings]
+      gtk-icon-theme-name = Catppuccin-Macchiato-Peach
+      gtk-theme-name = Catppuccin-Macchiato-Peach
+      gtk-application-prefer-dark-theme = true
+
 - name: Save VRAM on suspend
   tags: system
   blockinfile:
@@ -176,3 +207,27 @@
     # This needs to be stored on an fs with enough room, so we'll put it in /home
     block: |-
       options nvidia NVreg_PreserveVideoMemoryAllocations=1 NVreg_TemporaryFilePath=/home/{{ user }}/.cache/
+
+- name: Create video in/out dirs
+  tags: config
+  file:
+    name: /home/{{ user }}/Videos/{{ item }}
+    state: directory
+    mode: "0755"
+    owner: "{{ user }}"
+    group: "{{ user }}"
+  loop:
+    - convert_in
+    - convert_out
+
+- name: Configure incrond
+  tags: config
+  lineinfile:
+    path: /var/spool/incron/{{ user }}
+    create: true
+    mode: "0600"
+    owner: "{{ user }}"
+    group: "{{ user }}"
+    line: >
+      /home/{{ user }}/Videos/convert_in IN_CLOSE_WRITE /usr/bin/ffmpeg -i $@/$# -c:v dnxhd -profile:v dnxhr_hq -pix_fmt yuv422p -c:a pcm_s16le -f mov /home/{{
+      user }}/Videos/convert_out/$# && trash-put $@/$# 
