--- a/roles/docker/templates/dmz-apps-compose.yml
+++ b/roles/docker/templates/dmz-apps-compose.yml
@@ -143,7 +143,8 @@ services:
 
   nginx:
     container_name: nginx
-    image: nginx:latest
+    image: nginxinc/nginx-unprivileged
+    user: "2020"
     restart: unless-stopped
 
     depends_on:
