Fix Firefox emojis
Shoutout to Adam Fontenot and his helpful comment on a long-closed Mozilla bug
thread for finally pointing me towards a fix

https://bugzilla.mozilla.org/show_bug.cgi?id=1454152#c37

--- a/roles/arch_workstation/tasks/main.yml
+++ b/roles/arch_workstation/tasks/main.yml
@@ -83,7 +83,7 @@
     group: root
 
 - name: Configure fonts
-  tags: config
+  tags: config, fonts
   copy:
     src: fonts.conf
     dest: /etc/fonts/local.conf
