--- a/roles/arch_laptop/tasks/main.yml
+++ b/roles/arch_laptop/tasks/main.yml
@@ -4,3 +4,25 @@
   package:
     name:
       - brightnessctl # control screen/kbd backlights
+      - nvidia # proprietary drivers
+      - nvidia-settings # X server settings
+
+- name: Save VRAM on suspend
+  tags: system
+  blockinfile:
+    path: /etc/modprobe.d/nvidia-power-management.conf
+    create: true
+    mode: "0644"
+    # This needs to be stored on an fs with enough room, so we'll put it in /home
+    block: |-
+      options nvidia NVreg_PreserveVideoMemoryAllocations=1 NVreg_TemporaryFilePath=/home/{{ user }}/.cache/
+
+- name: Enable laptop services
+  tags: pkg
+  service:
+    name: "{{ item }}"
+    enabled: true
+  loop:
+    - nvidia-suspend
+    - nvidia-hibernate
+    - bluetooth
