Use keyring for ansible vault

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,8 @@
 inventory = inventory.yml
 vars_plugins = ~/.ansible/plugins/vars
 nocows = 1
+vault_password_file = vault-keyring-client.py
+vault_identity = ansible
 
 # Needed for SSH agent forwarding, used to clone git repos
 # https://stackoverflow.com/questions/24124140/ssh-agent-forwarding-with-ansible
