--- a/templates/dmz-apps/web.yml
+++ b/templates/dmz-apps/web.yml
@@ -44,7 +44,7 @@ services:
 
     environment:
       SECRET: ${FORWARD_AUTH_SECRET}
-      PROVIDER_URI: https://kc.{{ domain }}/realms/dmz
+      PROVIDER_URI: https://kc.{{ primary_domain }}/realms/dmz
       CLIENT_ID: traefik
       CLIENT_SECRET: ${FORWARD_AUTH_CLIENT_SECRET}
 
@@ -79,7 +79,7 @@ services:
     
     labels:
       traefik.enable: true
-      traefik.http.routers.h4.rule: Host(`h4.{{ domain }}`)
+      traefik.http.routers.h4.rule: Host(`h4.{{ primary_domain }}`)
       traefik.http.routers.h4.entrypoints: https
       traefik.http.routers.h4.tls.certresolver: default
       # Require keycloak sign-in to access any pages
@@ -100,23 +100,23 @@ services:
       PUID: 2010
       PGID: 2010
       TZ: {{ timezone }}
-      CMD_DOMAIN: hd.{{domain}}
+      CMD_DOMAIN: hd.{{ primary_domain }}
       CMD_PROTOCOL_USESSL: true
-      CMD_ALLOW_ORIGIN: "[hd.{{domain}}]"
+      CMD_ALLOW_ORIGIN: "[hd.{{ primary_domain }}]"
       CMD_ALLOW_ANONYMOUS: false # no guest usage
       CMD_DEFAULT_PERMISSION: limited # default new notes to only viewable by logged-in users
       CMD_EMAIL: false # don't allow signing in with email/password - only Keycloak
 
       # Keycloak SSO configuration
-      CMD_OAUTH2_USER_PROFILE_URL: https://kc.{{ domain }}/realms/dmz/protocol/openid-connect/userinfo
+      CMD_OAUTH2_USER_PROFILE_URL: https://kc.{{ primary_domain }}/realms/dmz/protocol/openid-connect/userinfo
       CMD_OAUTH2_USER_PROFILE_USERNAME_ATTR: preferred_username
       CMD_OAUTH2_USER_PROFILE_DISPLAY_NAME_ATTR: name
       CMD_OAUTH2_USER_PROFILE_EMAIL_ATTR: email
-      CMD_OAUTH2_TOKEN_URL: https://kc.{{ domain }}/realms/dmz/protocol/openid-connect/token
-      CMD_OAUTH2_AUTHORIZATION_URL: https://kc.{{ domain }}/realms/dmz/protocol/openid-connect/auth
+      CMD_OAUTH2_TOKEN_URL: https://kc.{{ primary_domain }}/realms/dmz/protocol/openid-connect/token
+      CMD_OAUTH2_AUTHORIZATION_URL: https://kc.{{ primary_domain }}/realms/dmz/protocol/openid-connect/auth
       CMD_OAUTH2_CLIENT_ID: hedgedoc # from Keycloak
       CMD_OAUTH2_CLIENT_SECRET: ${HEDGEDOC_OAUTH2_CLIENT_SECRET} # from Keycloak
-      CMD_OAUTH2_PROVIDERNAME: {{ domain }} # display name
+      CMD_OAUTH2_PROVIDERNAME: {{ primary_domain }} # display name
       # Per here https://shivering-isles.com/fixing-hedgedoc-profile-info-keycloak-20
       CMD_OAUTH2_SCOPE: "openid email profile"
 
@@ -128,7 +128,7 @@ services:
 
     labels:
       traefik.enable: true
-      traefik.http.routers.hd.rule: Host(`hd.{{ domain }}`)
+      traefik.http.routers.hd.rule: Host(`hd.{{ primary_domain }}`)
       traefik.http.routers.hd.entrypoints: https
       traefik.http.routers.hd.tls.certresolver: default
       traefik.http.services.hd.loadbalancer.server.port: 3000
@@ -170,7 +170,7 @@ services:
       - mariadb
 
     environment:
-      KC_HOSTNAME: kc.{{ domain }} 
+      KC_HOSTNAME: kc.{{ primary_domain }} 
       KC_PROXY: edge
       KC_DB: mariadb
       KC_DB_URL_HOST: mariadb
@@ -193,14 +193,14 @@ services:
       traefik.http.services.kc-service.loadbalancer.server.port: 8080
 
       # Create a basic router for Keycloak
-      traefik.http.routers.kc.rule: Host(`kc.{{ domain }}`)
+      traefik.http.routers.kc.rule: Host(`kc.{{ primary_domain }}`)
       traefik.http.routers.kc.service: kc-service
       traefik.http.routers.kc.entrypoints: https
       traefik.http.routers.kc.tls.certresolver: default
           
       # Create an additional router for the admin interface
       # Example here: https://www.reddit.com/r/Traefik/comments/hpsrx9/is_it_possible_to_configure_whitelist_for/
-      traefik.http.routers.kc-admin.rule: (Host(`kc.{{ domain }}`) && PathPrefix(`/admin`,`/metrics`,`/health`))
+      traefik.http.routers.kc-admin.rule: (Host(`kc.{{ primary_domain }}`) && PathPrefix(`/admin`,`/metrics`,`/health`))
       traefik.http.routers.kc-admin.service: kc-service
       traefik.http.routers.kc-admin.entrypoints: https
       traefik.http.routers.kc-admin.tls.certresolver: default
